--- a/DS_Level_1_필기.ipynb
+++ b/DS_Level_1_필기.ipynb
@@ -6,7 +6,7 @@
       "name": "DS Level 1 필기.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP+hbjP9ghGzDPusLXPZs/D",
+      "authorship_tag": "ABX9TyOTNGme8A3vMeszKouBYWvN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,8 @@
         }
       },
       "source": [
-        "round((5836 + 3891) * 0.4)"
+        "round((5836 + 3891) * 0.4)\n",
+        "print(f'1 + 1 = {1.0 + 1.0:.5f}')"
       ],
       "execution_count": 0,
       "outputs": [
