--- a/Tensorflow.ipynb
+++ b/Tensorflow.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNdJ8Y7x5Q4OXS8kcwje2xA",
+      "authorship_tag": "ABX9TyPzCfA7Mj5GFZ8lGVdv5Dyq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +29,25 @@
       "metadata": {
         "id": "UTlhw4cgKh3Z",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d9167838-01df-448e-e52a-204606e69f00"
       },
       "source": [
-        ""
+        "print('hhh')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hhh\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
